--- a/src/app/components/general/footer/footer.html
+++ b/src/app/components/general/footer/footer.html
@@ -1,16 +1,37 @@
-<footer class="bg-gray-900 w-full border-t border-gray-700 shadow-inner mt-10">
+<footer class="bg-gray-900 w-full border-t border-gray-700 shadow-inner">
   <div class="max-w-screen-xl mx-auto p-6 flex flex-col md:flex-row justify-between items-center text-white">
-    
+
     <!-- Logo / Nombre -->
     <span class="text-green-500 font-bold text-lg mb-4 md:mb-0">HackerSite © 2025</span>
-    
+
+    <!-- Menú rápido -->
     <!-- Menú rápido -->
     <ul class="flex space-x-6 text-sm mb-4 md:mb-0">
-      <li><a routerLink="/home" class="hover:text-green-500 transition duration-300">Home</a></li>
-      <li><a routerLink="/home" class="hover:text-green-500 transition duration-300">Pantalla Encriptar</a></li>
-      <li><a href="#" class="hover:text-green-500 transition duration-300">Pricing</a></li>
-      <li><a href="#" class="hover:text-green-500 transition duration-300">Contact</a></li>
+      <li>
+        <a routerLink="/home" class="nav-grow hover:text-green-500 transition duration-300">
+          Home
+        </a>
+      </li>
+
+      <li>
+        <a routerLink="/home" class="nav-grow hover:text-green-500 transition duration-300">
+          Pantalla Encriptar
+        </a>
+      </li>
+
+      <li>
+        <a href="#" class="nav-grow hover:text-green-500 transition duration-300">
+          Pricing
+        </a>
+      </li>
+
+      <li>
+        <a href="#" class="nav-grow hover:text-green-500 transition duration-300">
+          Contact
+        </a>
+      </li>
     </ul>
+
 
     <!-- Redes sociales -->
     <div class="flex space-x-4">
