--- a/src/app/components/general/footer/footer.html
+++ b/src/app/components/general/footer/footer.html
@@ -6,31 +6,34 @@
 
     <!-- Menú rápido -->
     <!-- Menú rápido -->
-    <ul class="flex space-x-6 text-sm mb-4 md:mb-0">
-      <li>
-        <a routerLink="/home" class="nav-grow hover:text-green-500 transition duration-300">
-          Home
-        </a>
-      </li>
+    <!-- Menú principal -->
+    <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+      <ul
+        class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-700 rounded-lg bg-gray-900 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-transparent">
 
-      <li>
-        <a routerLink="/home" class="nav-grow hover:text-green-500 transition duration-300">
-          Pantalla Encriptar
-        </a>
-      </li>
+        <li>
+          <a routerLink="/home"
+            class="nav-grow block py-2 px-3 text-white rounded hover:text-green-500 transition duration-300">
+            Home
+          </a>
+        </li>
 
-      <li>
-        <a href="#" class="nav-grow hover:text-green-500 transition duration-300">
-          Pricing
-        </a>
-      </li>
+        <li>
+          <a routerLink="/cifradoSimetrico"
+            class="nav-grow block py-2 px-3 text-white rounded hover:text-green-500 transition duration-300">
+            Cifrado simetrico
+          </a>
+        </li>
 
-      <li>
-        <a href="#" class="nav-grow hover:text-green-500 transition duration-300">
-          Contact
-        </a>
-      </li>
-    </ul>
+        <li>
+          <a routerLink="/cifradoAsimetrico"
+            class="nav-grow block py-2 px-3 text-white rounded hover:text-green-500 transition duration-300">
+            Cifrado asimétrico
+          </a>
+        </li>
+
+      </ul>
+    </div>
 
 
     <!-- Redes sociales -->
