--- a/src/app/components/general/nav-bar/nav-bar.html
+++ b/src/app/components/general/nav-bar/nav-bar.html
@@ -42,6 +42,13 @@
                     </a>
                 </li>
 
+                <li>
+                    <a routerLink="/compararArchivosS"
+                        class="nav-grow block py-2 px-3 text-white rounded hover:text-green-500 transition duration-300">
+                        Comparar archivos s
+                    </a>
+                </li>
+
             </ul>
         </div>
 
